// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with enabled comments 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderStyle": "solid",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 0.5,
            "marginBottom": 25,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 27,
              "lineHeight": 29,
              "maxWidth": 315,
              "paddingBottom": 10,
              "paddingTop": 30,
              "textAlign": "center",
            }
          }
        >
          65 comments
        </Text>
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 21,
              "maxWidth": 280,
              "textAlign": "center",
            }
          }
        >
          Comments are subject to our community guidelines, which can be viewed 
          <Text
            style={
              Object {
                "color": "#006699",
                "textDecorationLine": "underline",
              }
            }
          >
            here
          </Text>
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#006699",
              "borderRadius": 4,
              "elevation": 3,
              "height": 36,
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 25,
              "maxWidth": 215,
              "minWidth": 100,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 5,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 14,
                "lineHeight": 16,
                "paddingTop": 0,
              }
            }
          >
            VIEW COMMENTS
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. a full article with disabled comments 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "400",
              "lineHeight": 33,
              "marginBottom": 15,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 0.5,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 0.5,
              "paddingBottom": 6,
              "paddingTop": 7,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 21,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderStyle": "solid",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 0.5,
            "marginBottom": 25,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 27,
              "lineHeight": 29,
              "maxWidth": 315,
              "paddingBottom": 10,
              "paddingTop": 30,
              "textAlign": "center",
            }
          }
        >
          Comments for this article have been turned off
        </Text>
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 21,
              "maxWidth": 280,
              "textAlign": "center",
            }
          }
        >
          For more details, please see our 
          

          <Text
            style={
              Object {
                "color": "#006699",
                "textDecorationLine": "underline",
              }
            }
          >
            community guidelines
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
